# Fake-Solstice-Client-Android

./: README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidRenderer.cpp  AndroidRenderer.hpp  CMakeLists.txt  Stubs_Game_android.cpp  native-lib.cpp
app/src/main/cpp/reused/Features/Command/: CommandManager.hpp
app/src/main/cpp/reused/Features/Events/: WindowResizeEvent.hpp
app/src/main/cpp/reused/Features/GUI/: ModernDropdown.cpp
app/src/main/cpp/reused/Features/Modules/: Module.cpp  Setting.cpp
app/src/main/cpp/reused/Features/Modules/Misc/: ToggleSounds.cpp
app/src/main/cpp/reused/Features/Modules/Visual/: HudEditor.cpp  Interface.hpp  Keystrokes.cpp
app/src/main/cpp/reused/Hook/Hooks/RenderHooks/: D3DHook.hpp
app/src/main/cpp/reused/SDK/Minecraft/: ClientInstance.hpp  MinecraftGame.hpp
app/src/main/cpp/reused/SDK/Minecraft/Rendering/: GuiData.hpp
app/src/main/cpp/reused/Utils/: Keyboard.hpp  ProcUtils.hpp  Resources.hpp  SoundUtils.hpp
app/src/main/cpp/reused/Utils/MiscUtils/: D2D.hpp
app/src/main/cpp/shim/: Windows.h  d3d11.h
app/src/main/cpp/solstice_src/: FakeInput.hpp  FeatureManagerImpl.cpp  ModuleManagerImpl.cpp  ModuleRegistry.cpp  Wiring.hpp  pch.hpp
app/src/main/cpp/solstice_src/stubs/: Stubs_Utils.cpp
app/src/main/java/com/solstice/fakeclient/: KeyMap.kt  MainActivity.kt  NativeBridge.kt  OverlayService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
